--- a/startup-demo/index.html
+++ b/startup-demo/index.html
@@ -16,25 +16,32 @@
 </head>
   
 <body>
-
+<div class="page-container">
   <header>
+    <div class="logo-button-container">
+      <button id="menu-button"><i class="fas fa-bars"></i></button>
+      <a class="header-logo small" href="#">STARTUP</a>
+    </div>
 
-    <nav>
+    <nav id="menu">
       <ul>
         <li><a href="#">Team</a></li>
         <li><a href="#">About us</a></li>
         <li><a href="#">Process</a></li>
-        <li><a href="#">Logo</a></li>
+        <li  id="sm-hidden"><a class="header-logo" href="#">STARTUP</a></li>
         <li><a href="#">Explication</a></li>
         <li><a href="#">News</a></li>
         <li><a href="#">Contact</a></li>
+        <li><a href="#">Apply</a></li>
       </ul>
+
+      <a href="#" class="header-apply">Apply</a>
     </nav>
 
     <div class="welcome middle">
       <h1>Welcome to Website.</h1>
-      <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean vitae tempus odio. Nam gravida diam eros, non ultricies velit varius ut.</p>
-      <p>Scroll Down </p>
+      <p class="wel-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean vitae tempus odio. Nam gravida diam eros, non ultricies velit varius ut.</p>
+      <p class="scroll-down">Scroll Down </p>
       <img src="Chevron.png" alt="">
     </div>
 
@@ -80,39 +87,64 @@
       <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean vitae tempus odio. Nam gravida diam eros, non ultricies velit varius ut.</p>
 
       <div class="process-area">
-        <div class="row">
+        <div class="myrow">
           <div class="process-items">
-            <p class="process-items-title">01</p>
-            <p class="process-items-content">In sollicitudin at libero ac fermentum. Fusce arcu odio, pretium hendrerit enim eget, tempus mollis diam.</p>
+            <p class="process-title">01</p>
+            <p class="process-text">In sollicitudin at libero ac fermentum. Fusce arcu odio, pretium hendrerit enim eget, tempus mollis diam.</p>
           </div>
 
+          <div class="process-items">
+            <p class="process-title">03</p>
+            <p class="process-text"> In sollicitudin at libero ac fermentum. Fusce arcu odio, pretium hendrerit enim eget, tempus mollis diam.</p>
+          </div>
+
+          <div class="process-items">
+            <p class="process-title">05</p>
+            <p class="process-text">In sollicitudin at libero ac fermentum. Fusce arcu odio, pretium hendrerit enim eget, tempus mollis diam.</p>
+          </div>
+        </div>
+        <div class="myrow">
+          <div class="process-items">
+            <p class="process-title">02</p>
+            <p class="process-text">In sollicitudin at libero ac fermentum. Fusce arcu odio, pretium hendrerit enim eget, tempus mollis diam.</p>
+          </div>
+
+          <div class="process-items">
+            <p class="process-title">04</p>
+            <p class="process-text">In sollicitudin at libero ac fermentum. Fusce arcu odio, pretium hendrerit enim eget, tempus mollis diam.</p>
+          </div>
+
+          <div class="process-items">
+            <p class="process-title">06</p>
+            <p class="process-text">In sollicitudin at libero ac fermentum. Fusce arcu odio, pretium hendrerit enim eget, tempus mollis diam.</p>
+          </div>
         </div>
       </div>
     </section>
 
     <section class="stats big-container">
-      <p>VIVAMUS BLANDIT</p>
+      <p class="vivamus">VIVAMUS BLANDIT</p>
       <div class="stats-row">
         <div class="stats-items">
-          <p>12</p>
-          <p>Pellentesque vitae
+          <p class="stats-num">12</p>
+          <p class="stats-text">Pellentesque vitae
             <br>
             (Maecenas at nulla ac mauris)</p>
         </div>
         <div class="stats-items">
-          <p>12</p>
-          <p>Pellentesque vitae
+          <p class="stats-num">12</p>
+          <p class="stats-text">Pellentesque vitae
             <br>
             (Maecenas at nulla ac mauris)</p>
         </div>
         <div class="stats-items">
-          <p>12</p>
-          <p>Pellentesque vitae
+          <p class="stats-num">12</p>
+          <p class="stats-text">Pellentesque vitae
             <br>
             (Maecenas at nulla ac mauris)</p>
         </div>
       </div>
-      <p>VIVAMUS BLANDIT</p>  
+      <p class="vivamus">VIVAMUS BLANDIT</p>  
       <div class="brands">
         <a href="#"><img src="hello-fresh.png" alt=""></a>
         <a href="#"><img src="los-angeles-times@2x.png" alt=""></a>
@@ -128,7 +160,7 @@
         <div class="news-items">
           <img src="Mask.png" alt="">
           <div class="news-items-content">
-            <p>Lorem ipsum dolor</p>
+            <p class="news-title">Lorem ipsum dolor</p>
             <div class="news-content-row">
               <img src="news.png" alt="">
               <p class="author">BY JOHN SMITH</p>
@@ -143,7 +175,7 @@
         <div class="news-items">
           <img src="Mask.png" alt="">
           <div class="news-items-content">
-            <p>Lorem ipsum dolor</p>
+            <p class="news-title">Lorem ipsum dolor</p>
             <div class="news-content-row">
               <img src="news.png" alt="">
               <p class="author">BY JOHN SMITH</p>
@@ -158,7 +190,7 @@
         <div class="news-items">
           <img src="Mask.png" alt="">
           <div class="news-items-content">
-            <p>Lorem ipsum dolor</p>
+            <p class="news-title">Lorem ipsum dolor</p>
             <div class="news-content-row">
               <img src="news.png" alt="">
               <p class="author">BY JOHN SMITH</p>
@@ -173,7 +205,7 @@
         <div class="news-items">
           <img src="Mask.png" alt="">
           <div class="news-items-content">
-            <p>Lorem ipsum dolor</p>
+            <p class="news-title">Lorem ipsum dolor</p>
             <div class="news-content-row">
               <img src="news.png" alt="">
               <p class="author">BY JOHN SMITH</p>
@@ -188,7 +220,7 @@
         <div class="news-items">
           <img src="Mask.png" alt="">
           <div class="news-items-content">
-            <p>Lorem ipsum dolor</p>
+            <p class="news-title">Lorem ipsum dolor</p>
             <div class="news-content-row">
               <img src="news.png" alt="">
               <p class="author">BY JOHN SMITH</p>
@@ -203,7 +235,7 @@
         <div class="news-items">
           <img src="Mask.png" alt="">
           <div class="news-items-content">
-            <p>Lorem ipsum dolor</p>
+            <p class="news-title">Lorem ipsum dolor</p>
             <div class="news-content-row">
               <img src="news.png" alt="">
               <p class="author">BY JOHN SMITH</p>
@@ -217,16 +249,85 @@
       <a href="#" class="see-more">DISCOVER NEWS</a>
     </section>
 
-    <section class="apply">
+    <section class="apply big-container">
       <h2>Apply</h2>
-      <p>Thought experiments (Gedankenexperimenten) are “facts” in the sense</p>
+      <p class="description">Thought experiments (Gedankenexperimenten) are “facts” in the sense</p>
+      <form action="">
+        <label for="fname">First Name</label>
+        <input type="text" name="" id="fname">
+
+        <label for="name">Name</label>
+        <input type="text" name="" id="name">
+
+        <label for="email">Email</label>
+        <input type="email" name="" id="email">
+
+        <label for="tel">Telephone Number</label>
+        <input type="text" name="" id="tel">
+
+        <p>Upload your CV</p> 
+        <a href="#">
+          <div class="drag">
+            <p>Drag and drop a file or</p>
+            <p>Search a file</p>
+          </div>
+        </a>
+
+        <label for="comment">Upload your CV</label>
+        <input type="text" name="" id="comment">
+
+        <p class="apply-sm-text">
+          Thought experiments (Gedankenexperimenten) are “facts” in the sense that they have a “real life” correlate in the form of electrochemical activity in the brain.
+        </p>
+
+        <a href="#" class="see-more">VALIDATE</a>
+      </form>
     </section>
 
   </main>
   <footer>
+    <p class="footer-logo">STARTUP</p>
+
+    <ul class="footer-menu">
+      <li><a href="#">Team</a></li>
+      <li><a href="#">About us</a></li>
+      <li><a href="#">Process</a></li>
+      <li><a href="#">Logo</a></li>
+      <li><a href="#">Explication</a></li>
+      <li><a href="#">News</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+
+    <p>Privacy Policy</p>
+
+    <p>Legal Notice</p>
+
+    <p>English</p>
+
+    <button class="footer-btn">
+      <img src="footerarrow.png" alt="">
+    </button>
+
+    <ul class="language-menu">
+      <li>English</li>
+      <li>Still English</li>
+    </ul>
+
+    <a href="#">
+      <img src="facebook.png" alt="">
+    </a>
+    <a href="#">
+      <img src="twitter.png" alt="">
+    </a>
+    <a href="#">
+      <img src="instagram.png" alt="">
+    </a>
+    <a href="#">
+      <img src="linkdenin.png" alt="">
+    </a>
 
   </footer>
-
+</div>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="../fontawesome-free-5.15.1-web/js/all.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
