--- a/halo/index.html
+++ b/halo/index.html
@@ -23,11 +23,11 @@
               <button class="btn search-btn"><i class="fas fa-search"></i></button>
             </div>
             <ul class="navbar-nav">
-              <li class="nav-item"><a class="nav-link px-md-3" href="camera-hub.html">Máy ảnh</a></li>
-              <li class="nav-item"><a class="nav-link px-md-3" href="camera-hub.html">Ống kính</a></li>
-              <li class="nav-item"><a class="nav-link px-md-3" href="camera-hub.html">Phụ kiện</a></li>
-              <li class="nav-item"><a class="nav-link px-md-3" href="review-hub.html">Đánh giá</a></li>
-              <li class="nav-item display-till-md"><a class="nav-link" href="review-hub.html">Đăng nhập/Đăng ký</a></li>
+              <li class="nav-item"><a class="nav-link py-3 px-md-3" href="camera-hub.html">Máy ảnh</a></li>
+              <li class="nav-item"><a class="nav-link py-3 px-md-3" href="camera-hub.html">Ống kính</a></li>
+              <li class="nav-item"><a class="nav-link py-3 px-md-3" href="camera-hub.html">Phụ kiện</a></li>
+              <li class="nav-item"><a class="nav-link py-3 px-md-3" href="review-hub.html">Đánh giá</a></li>
+              <li class="nav-item display-till-md"><a class="nav-link py-3" href="review-hub.html">Đăng nhập/Đăng ký</a></li>
             </ul>
           </div>
           <div class="log-cart-search"><a class="hidden-till-md log" href="review-hub.html">Đăng nhập/Đăng ký</a><a class="cart-icon" href="cart.html"><i class="fas fa-shopping-cart"></i></a>
