--- a/halo/parts/header.html
+++ b/halo/parts/header.html
@@ -1,7 +1,7 @@
 
 <header>
   <nav class="navbar navbar-expand-md navbar-dark">
-    <div class="container">
+    <div class="container-xl px-4 px-sm-5 px-xl-0">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" aria-controls="collapsibleNavbar" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button><a class="navbar-brand" href="index.html"><img src="img/misc-img/logo-white.png" alt=""/></a>
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <div class="search-bar-till-md">
