--- a/halo/parts/main-carousel.html
+++ b/halo/parts/main-carousel.html
@@ -8,86 +8,80 @@
   </ul>
   <!--nội dung carousel-->
   <div class="carousel-inner">
-    <div class="carousel-item banner-1 active">
-      <div class="container container-md">
-        <div class="carousel-caption">
-          <h1 class="carousel-title font-weight-bold">Tiêu điểm tháng 1</h1>
-          <div class="carousel-caption__text">
-            <div class="logo-wrapper-1">
-              <p class="logo-canon">Canon</p>
-              <p class="eos-r">EOS R</p>
-              <div class="progress" style="height: 5px">
-                <div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100" style="width: 100%; height: 5px"></div>
-              </div>
+    <div class="carousel-item banner-1 container-fluid p-0 active">
+      <div class="carousel-caption container-xl pb-0 px-0 px-md-5 px-xl-0">
+        <h1 class="carousel-title font-weight-bold">Tiêu điểm tháng 1</h1>
+        <div class="carousel-caption__text">
+          <div class="logo-wrapper-1">
+            <p class="logo-canon">Canon</p>
+            <p class="eos-r">EOS R</p>
+            <div class="progress" style="height: 5px">
+              <div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100" style="width: 100%; height: 5px"></div>
             </div>
-            <p class="carousel-header">ĐỊNH NGHĨA LẠI </p>
-            <p class="carousel-header">CHUẨN MỰC HÌNH ẢNH HIỆN ĐẠI</p>
-            <button class="btn btn--light seemore-btn" type="button">Xem chi tiết</button>
           </div>
-          <div class="carousel-caption__img"></div>
+          <p class="carousel-header">ĐỊNH NGHĨA LẠI </p>
+          <p class="carousel-header">CHUẨN MỰC HÌNH ẢNH HIỆN ĐẠI</p>
+          <button class="btn btn--light seemore-btn" type="button">Xem chi tiết</button>
+        </div>
+        <div class="carousel-caption__img"></div>
+        <div class="carousel-caption__extra hidden-till-md">
+          <div class="extra"><img class="extra-img" src="img/carousel-img/carousel-1-extra-1.png" alt=""/>
+            <p class="extra-text">LẤY NÉT TỰ ĐỘNG DUAL PIXEL CMOS </p>
+          </div>
+          <div class="extra"><img class="extra-img" src="img/carousel-img/carousel-1-extra-2.png" alt=""/>
+            <p class="extra-text">TỐI ƯU HÓA ĐIỀU KHIỂN </p>
+          </div>
+          <div class="extra"><img class="extra-img" src="img/carousel-img/carousel-1-extra-3.png" alt=""/>
+            <p class="extra-text">QUAY VIDEO ĐA CHẾ ĐỘ ĐỘ PHÂN GIẢI 4K</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="carousel-item banner-2 container-fluid p-0">
+      <div class="carousel-caption container-xl pb-0 px-0 px-md-5 px-xl-0">
+        <h1 class="carousel-title font-weight-bold">Tiêu điểm tháng 1</h1>
+        <div class="carousel-caption__text">
+          <div class="logo-wrapper-2">
+            <div class="progress hidden-till-md" style="width: 150px; height: 5px">
+              <div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100" style="width: 100%; height: 5px"></div>
+            </div>
+            <div class="logo-sony-a9-wrapper">
+              <p class="logo-sony">SONY</p><img class="a9-logo" src="img/carousel-img/a9-logo.png" alt=""/>
+            </div>
+            <div class="progress display-till-md" style="height: 5px">
+              <div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100" style="width: 100%; height: 5px"></div>
+            </div>
+          </div>
           <div class="carousel-caption__extra hidden-till-md">
-            <div class="extra"><img class="extra-img" src="img/carousel-img/carousel-1-extra-1.png" alt=""/>
-              <p class="extra-text">LẤY NÉT TỰ ĐỘNG DUAL PIXEL CMOS </p>
-            </div>
-            <div class="extra"><img class="extra-img" src="img/carousel-img/carousel-1-extra-2.png" alt=""/>
-              <p class="extra-text">TỐI ƯU HÓA ĐIỀU KHIỂN </p>
-            </div>
-            <div class="extra"><img class="extra-img" src="img/carousel-img/carousel-1-extra-3.png" alt=""/>
-              <p class="extra-text">QUAY VIDEO ĐA CHẾ ĐỘ ĐỘ PHÂN GIẢI 4K</p>
-            </div>
+            <div class="extra"><img class="extra-img" src="img/carousel-img/carousel-2-extra-1.png" alt=""/></div>
+            <div class="extra"><img class="extra-img" src="img/carousel-img/carousel-2-extra-2.png" alt=""/></div>
+            <div class="extra"><img class="extra-img" src="img/carousel-img/carousel-2-extra-3.png" alt=""/></div>
           </div>
+          <p class="carousel-header display-till-md">SỰ HOÀN HẢO</p>
+          <p class="carousel-header hidden-till-md">Sự hoàn hảo chưa bao giờ ở gần đến vậy</p>
+          <p class="carousel-header display-till-md">CHƯA BAO GIỜ GẦN ĐẾN VẬY</p>
+          <button class="btn btn--light seemore-btn" type="button">Xem chi tiết</button>
         </div>
+        <div class="carousel-caption__img"></div>
       </div>
     </div>
-    <div class="carousel-item banner-2">
-      <div class="container container-md">
-        <div class="carousel-caption">
-          <h1 class="carousel-title font-weight-bold">Tiêu điểm tháng 1</h1>
-          <div class="carousel-caption__text">
-            <div class="logo-wrapper-2">
-              <div class="progress hidden-till-md" style="width: 150px; height: 5px">
-                <div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100" style="width: 100%; height: 5px"></div>
-              </div>
-              <div class="logo-sony-a9-wrapper">
-                <p class="logo-sony">SONY</p><img class="a9-logo" src="img/carousel-img/a9-logo.png" alt=""/>
-              </div>
-              <div class="progress display-till-md" style="height: 5px">
-                <div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100" style="width: 100%; height: 5px"></div>
-              </div>
-            </div>
-            <div class="carousel-caption__extra hidden-till-md">
-              <div class="extra"><img class="extra-img" src="img/carousel-img/carousel-2-extra-1.png" alt=""/></div>
-              <div class="extra"><img class="extra-img" src="img/carousel-img/carousel-2-extra-2.png" alt=""/></div>
-              <div class="extra"><img class="extra-img" src="img/carousel-img/carousel-2-extra-3.png" alt=""/></div>
-            </div>
-            <p class="carousel-header display-till-md">SỰ HOÀN HẢO</p>
-            <p class="carousel-header hidden-till-md">Sự hoàn hảo chưa bao giờ ở gần đến vậy</p>
-            <p class="carousel-header display-till-md">CHƯA BAO GIỜ GẦN ĐẾN VẬY</p>
-            <button class="btn btn--light seemore-btn" type="button">Xem chi tiết</button>
+    <div class="carousel-item banner-3 container-fluid p-0">
+      <div class="carousel-caption container-xl pb-0 px-0 px-md-5 px-xl-0">
+        <h1 class="carousel-title font-weight-bold">Tiêu điểm tháng 1</h1>
+        <div class="carousel-caption__text">
+          <div class="logo-wrapper-3">
+            <p class="logo-sony">SONY</p><span class="collab"><i class="fas fa-times"></i></span><img class="lotr-logo" src="img/carousel-img/lotr-logo.png" alt=""/>
           </div>
-          <div class="carousel-caption__img"></div>
-        </div>
-      </div>
-    </div>
-    <div class="carousel-item banner-3">
-      <div class="container container-md">
-        <div class="carousel-caption">
-          <h1 class="carousel-title font-weight-bold">Tiêu điểm tháng 1</h1>
-          <div class="carousel-caption__text">
-            <div class="logo-wrapper-3">
-              <p class="logo-sony">SONY</p><span class="collab"><i class="fas fa-times"></i></span><img class="lotr-logo" src="img/carousel-img/lotr-logo.png" alt=""/>
-            </div>
-            <div class="carousel-caption__img-wrapper hidden-till-md">
-              <div class="carousel-caption__img"></div>
-              <div class="carousel-caption__img"></div>
-              <div class="carousel-caption__img"></div>
-            </div>
-            <p class="carousel-header">MỘT NGÀM CHO TẤT CẢ</p>
-            <p class="carousel-header">Kết nối mọi thứ với ngàm E-mount của <span class="logo-sony-inline">SONY</span></p>
-            <button class="btn btn--light seemore-btn" type="button">Xem chi tiết</button>
+          <div class="carousel-caption__img--triple hidden-till-md">
+            <div class="carousel-caption__img"></div>
+            <div class="carousel-caption__img"></div>
+            <div class="carousel-caption__img"></div>
           </div>
-          <div class="carousel-caption__img display-till-md"></div>
+          <p class="carousel-header">MỘT NGÀM CHO TẤT CẢ</p>
+          <p class="carousel-header">Kết nối mọi thứ với ngàm E-mount của <span class="logo-sony-inline">SONY</span></p>
+          <button class="btn btn--light seemore-btn" type="button">Xem chi tiết</button>
         </div>
+        <div class="carousel-caption__img display-till-md"></div>
       </div>
     </div><a class="carousel-control-prev" href="#main-carousel" data-slide="prev"><img src="img/misc-img/prev-arrow-xs-v2.png"/></a><a class="carousel-control-next" href="#main-carousel" data-slide="next"><img src="img/misc-img/next-arrow-xs-v2.png"/></a>
   </div>
